# md-converter

./: .gitignore  AGENTS.md  MEMORY.md  index.html  pyproject.toml  ruff.toml
.secrets/: approve-bot.env.example
.zcode/: config.json
docs/superpowers/plans/: 2026-07-21-telegram-approve-mcp.md
docs/superpowers/specs/: 2026-07-21-telegram-approve-mcp-design.md
scripts/: HermesBackup6h.xml  hermes-approve-mcp.py  hermes-backup.ps1  hermes-session-memory.py  run-session-memory-hook.cmd
tests/: conftest.py
tests/integration/: test_poller.py  test_race_conditions.py  test_request_approval.py  test_store.py  test_telegram_client.py
tests/unit/: test_config.py  test_format.py  test_gen_id.py  test_parse_callback.py  test_validate.py
