[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-approve-mcp"
version = "0.1.0"
description = "Stdio MCP server for requesting human approval via Telegram"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "mcp>=1.0.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-timeout>=2.3.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
  "integration: tests that exercise the store/poller/Telegram client with mocks",
  "unit: pure-function tests with no I/O",
]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
files = ["scripts/hermes-approve-mcp.py"]
